# ValvesPal

./: CheckinData.ipynb  DataShowMaker.ipynb  README.md  SearchWindow.py  boxplot_chart.html  game.py  game_info.py  getPrice.py  grouped_bar_chart.html  main.py  pyproject.toml  requirements.txt  searchBar.py  synchronized_step_line_charts_with_forecast.html  test.py  test1.ui  test2.ui  test3.ui  total_savings_chart.html
DiscountFrequencyAnalysis/: DiscountFrequencyAnalysis.py  DiscountSaving.py  MaxAndMinDiscountAnalysis.py  PriceComparisonGrouped.py  PriceEvolutionStepLineChart.py  TotalSaving.py  generate_all_charts.py  price_chart_boxplot.html  price_chart_column_chart.html  price_chart_grouped_bar.html  price_chart_heatmap.html  price_chart_pie_chart.html  price_chart_step_line.html
PriceChart/: generate_all_charts.py  price_chart_boxplot.html  price_chart_column.html  price_chart_grouped_bar.html  price_chart_heatmap.html  price_chart_pie.html  price_chart_step_line.html  shops.json
barRaceCharts/: BarChartDataConvert.py  BarRace_all.html  bar_race.css  dataset.json  function.js  steam_peak_games_4years_All.xlsx  steam_peak_games_4years_Anime.xlsx  steam_peak_games_4years_Horror.xlsx  steam_peak_games_4years_Racing.xlsx  steam_peak_games_4years_Sandbox.xlsx  steam_peak_games_4years_Singleplayer.xlsx  steam_peak_games_4years_Sports.xlsx  steam_peak_games_4years_VisualNovel.xlsx
mapWorld/: country_user_gain.csv  function1.js  function2.js  function3.js  gain.py  index.html  steam_users_2019_output.csv  steam_users_2021_output.csv  style.css  tab.js
(+26 files in other folders)
