[tool.poetry]
name = "valvespal"
version = "0.1.0"
description = "Project for Data analyze with Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "6.7.1"
beautifulsoup4 = "4.12.3"
numpy = "2.1.3"
pandas = "2.2.3"
pyautogui = "0.9.54"
pyqt6-sip = "13.8.0"
requests = "2.32.3"
scikit-learn = "1.5.2"
selenium = "4.26.1"
statsmodels = "0.14.4"
pyqt6-webengine = "^6.7.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
